# bondgraph-tools

./: .gitignore  README.md  pyproject.toml  queries.py  rdf2cellml.py  spec2networkx.py  specgraph.py
bondgraph/: README.md  __init__.py  bondgraph.py  definitions.py  model.py  namespaces.py  pyproject.toml  quantity.py  queries.py  spec2networkx.py  template.py  units.py
bondgraph/bondgraph/: __init__.py  bondgraph.py  definitions.py  queries.py
bondgraph/bondgraph/cellml/: __init__.py
bondgraph/cellml/: __init__.py
celldltools/: README.md  graph2celldl.py  pyproject.toml
celldltools/graph2celldl/: __init__.py  celldl.py  definitions.py
celldltools/graph2celldl/data/: control_phys_vessel.csv  lung_ROM_vessel.csv
data/: single-segment.ttl  stomach-spleen.ttl  vascular-segment-template.ttl
data/shex/: bgmodel.shex  template.shex
docs/: Notes.md  merging.md
