[project]
name = "bondgraph"
version = "0.0.1"
description = ""
authors = [
    { name = "David Brooks", email = "<d.brooks@auckland.ac.nz>"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "networkx >=3.4.2",
    "rdflib >=7.1.3",
    "sympy @ git+https://github.com/dbrnz/sympy.git@super-split-sub",
    "pint >=0.24.4",
    "ucumvert >=0.2.1",
    "lxml (>=5.3.1,<6.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
]

[tool.poetry.dependencies]
celldltools = { path = "../CellDL-electron/tools" }

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
