[project]
name = "bondgraph-tools"
version = "1.2.1"
description = "Tools for working with RDF descriptions of bondgraphs"
authors = [
    { name = "David Brooks", email = "<d.brooks@auckland.ac.nz>"}
]
requires-python = ">=3.12,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
bondgraph = { path = "bondgraph", develop = true }
celldltools = { path = "celldltools", develop = true }

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
