[tool.poetry]
name = "celldl-tools"
version = "0.0.1"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
networkx = "^3.4.2"
rdflib = "^7.1.3"
lxml = "^5.3.1"
numpy = "^2.2.4"
scipy = "^1.15.2"

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = "tools/.venv"
