[project]
name = "celldltools"
version = "1.0.0"
description = "Tools for working with CellDL"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "networkx >=3.4.2",
    "numpy (>=2.2.4,<3.0.0)",
    "rdflib >=7.1.3",
    "scipy >=1.15.2",
    "lxml (>=5.3.1,<6.0.0)",
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../"
version-pinning-rule = '=='  # Choose between "==", "~", "^", ">=,<"
